# LlamaGymEDU

./: .gitignore  README.md  demo_blackjack.jsonl  pyproject.toml
examples/: blackjack.py  text-world.py
llamagym/: __init__.py  agent.py  model_loader.py  models.py  replay.py  sft_trainer.py  tokenization_utils.py
requirements/: base.txt  linux.txt  textworld.txt
scripts/: bootstrap.py
tests/: test_sft.py
