[tool.poetry]
name = "llamagym"
version = "0.1.1"
description = "Fine-tune LLM agents with online reinforcement learning"
authors = ["Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=2.3,<2.4"
transformers = ">=4.43.3,<4.44"
trl = ">=0.9.6,<0.10"
gymnasium = ">=0.29,<0.30"
peft = ">=0.7.1,<0.8"
accelerate = ">=0.33,<0.34"
scipy = ">=1.12,<1.14"
tqdm = ">=4.66,<5"
wandb = ">=0.16,<0.18"
textworld = {version = ">=1.6,<1.7", optional = true}
bitsandbytes = {version = ">=0.43,<0.45", optional = true}


[tool.poetry.extras]
linux = ["bitsandbytes"]
textworld = ["textworld"]
all = ["bitsandbytes", "textworld"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
